# drohnen-design

./: .env  .gitignore  README.md  build_executable.sh  index.html  models.py  orders_completed.json  orders_failed.json  pyproject.toml  requirements.txt  run.py  settings  ui.py  utils.py
drohnendesign/: run.py  ui.py
models/: country_handler.py  file_manager.py  ftp_handler.py  image_labeler.py  json_handler.py  order_processor.py  pdf_creator.py  woocommerce_api.py
tests/: test_download_image.py  test_order_check.py  test_png_to_pdf.py
