[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drohnendesign"
version = "0.1.0"
description = "Drohnen Design order processing application with GUI"
authors = [{name = "Drohnen Design"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow",
    "pycountry",
    "cairosvg",
    "PyMuPDF",
    "python-dotenv",
    "woocommerce",
    "requests",
]

[project.scripts]
drohnendesign = "drohnendesign.ui:main"

[tool.setuptools.package-data]
"drohnendesign" = ["fonts/*.ttf", "cuts/*.pdf"]
